# Image-Classification-and-Recommendation

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
data/label_encoders/: class_encoder.npy  style_encoder.npy
data/models/: cluster-kmeans.model  task-1-CNN.keras  task-2-CNN.keras  task-3-CNN.keras
data/processed/csv/: duplicates.csv  test_X.csv  val_X.csv
data/tuner_results/task_1_CNN_bayesian/: oracle.json
data/tuner_results/task_1_CNN_bayesian/trial_00/: checkpoint.data-00000-of-00001  checkpoint.index  trial.json
data/tuner_results/task_1_CNN_bayesian/trial_01/: checkpoint.data-00000-of-00001  checkpoint.index  trial.json
data/tuner_results/task_1_CNN_bayesian/trial_02/: checkpoint.data-00000-of-00001  checkpoint.index  trial.json
data/tuner_results/task_1_CNN_bayesian/trial_03/: checkpoint.data-00000-of-00001  checkpoint.index  trial.json
data/tuner_results/task_1_CNN_bayesian/trial_04/: checkpoint.data-00000-of-00001  checkpoint.index  (+1 more)
notebooks/: 0. Main.ipynb  1. EDA.ipynb  2-1. Preprocessing Copy.ipynb  2. Preprocessing.ipynb  3. ANN_Classifier.ipynb  3. Task 1 - ANN.ipynb  3. Task 1 - CNN.ipynb  3.1. Task 1 - ANN.ipynb  4. Task 1 - CNN.ipynb  5. Recommend - Class.ipynb  5. Recommend.ipynb  6. Recommend - Class & Style.ipynb  6. Task 3 - CNN.ipynb  7. Task 3 - CNN.ipynb  delete_duplicate_example.ipynb  test.ipynb
streamlit/: app.py  test.ipynb  utils.py
utils/: augmentation.py  data.py  duplicates.py  encoding.py  find_near_duplicates.ipynb  normalization.py  rescale_image.py  tensorflow_preprocessing.py  visualization.py
(+15 files in other folders)
