[project]
name = "Image-Classification-and-Recommendation"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Quân Đỗ", email = "aloha.quando@gmail.com"},
]
dependencies = [
    "jupyter",
    "tqdm",
    "ipython",
    "numpy",
    "matplotlib~=3.8.4",
    "graphviz",
    "pydot",
    "pandas~=2.2.2",
    "seaborn~=0.13.2",
    "scikit-learn",
    "scikit-image",
    "imagehash",
    "tensorflow==2.15.1",
    "keras",
    "keras-tuner",
    "pillow~=10.3.0",
    "joblib",
    "annoy",
    "swifter",
    "scikeras",
    "pickleshare>=0.7.5",
    "streamlit<=1.34.0",
    "plotly>=5.22.0",
]

requires-python = "<3.12,>=3.11"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
macos = [
    "tensorflow-io-gcs-filesystem==0.37.0",
    "tensorflow-metal",
]

windows = [
    "tensorflow-io-gcs-filesystem==0.31.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
